[gd_scene load_steps=2 format=3 uid="uid://xp0r3j4kshqg"]

[ext_resource type="Script" path="res://Scenes/game_settings.gd" id="1_40yvx"]

[node name="GameSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40yvx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 27.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TopContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TopContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TopContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="TopContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="TopContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Game Size (Tile Count)"

[node name="HSlider" type="HSlider" parent="TopContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AddPlayerButton" type="Button" parent="TopContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Add Player"

[node name="VBoxContainer2" type="VBoxContainer" parent="TopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TopContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Button2" type="Button" parent="TopContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Button3" type="Button" parent="TopContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
offset_right = 3.0
offset_bottom = 4.0

[node name="BottomContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="BottomContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="BottomContainer/MarginContainer"]
layout_mode = 2
alignment = 1
